[main]: fix name and seo config

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "astro-pwa-starter",
+  "name": "astro-vue-pwa-boilerplate",
   "version": "0.0.0",
   "private": false,
   "type": "module",
