--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@vite-pwa/astro": "^0.2.0",
     "astro": "4.2.3",
     "astro-compress": "^2.2.8",
+    "astro-eslint-parser": "^0.16.2",
     "astro-seo": "^0.8.0",
     "eslint": "^8.56.0",
     "eslint-plugin-astro": "^0.31.3",
@@ -28,6 +29,7 @@
     "prettier": "^3.2.4",
     "prettier-plugin-astro": "^0.13.0",
     "prettier-plugin-tailwindcss": "^0.5.11",
-    "typescript": "^5.3.3"
+    "typescript": "^5.3.3",
+    "vue-eslint-parser": "^9.4.2"
   }
 }
